2.3.3
 - discover-sequence-variants somatic output: Make it possible to run simple trio design by removing the
   requirement for a germline sample.
 - discover-sequence-variants somatic output: Earlier versions were reporting somatic variation candidates
   when two parents are homozygotes and the somatic samples was Het (the fisher p-value with each parent is
   very significant in this case, but does not indicate a somatic change). This also improves q-values because
   they are less results that need to be corrected.
 - discover-sequence-variants somatic output: Add an error message when a sample is mispelled in the covariates
   file.
2.3.2
 - run-parallel-mode now supports paired input files.
 - fasta-to-compact: add --force-quality-encoding option to force the quality values within the specified
   encoding range.
 - suggest-position-slices: fix problem where first slice of genome was omitted from output (with new split
   by number of bytes option introduced in 2.3).
2.3.1
 - Fix for https://github.com/CampagneLaboratory/goby/issues/3
 - Upgrade commons-io and dsiutils to latest jar versions. Log messages when scanning reads file with cfs mode.
 - DistinctValueCounterBitSet: now grows to biggest size at construction time.
 - Fixed a performance problem. When reading large reads file (>10GB), performance of ReadsReader would degrade
   over time. This was due to caching of data in static protobuf methods of ReadCollection. We now create a
   builder instance that gets garbage collected when it is no longer used. This fixes a subtle performance
   problem. The same fix has been applied to alignment readers.
2.3
 - concatenate-alignments mode: add ability to restrict output to a genomic slice (see -s and -e options).
 - API change: AlignmentSliceHelper makes it easier to parse and process genomic slices for sets of alignments.
 - concatenate-alignments mode: now transfers read groups to output in the same way that non-sorted concat does.